# Open-LLM-VTuber

./: .env  .gitattributes  .gitignore  .gitmodules  GPT_Sovits.py  LICENSE  Ollama.py  OpenLLMVtuber.py  README.CN.md  README.md  TaskQueue.py  __init__.py  activate_conda.py  chat-test.txt  chatbot.py  conda_env_install.bat  conf.CN.yaml  conf.ex.yaml  conf.yaml  default.env  dockerfile  install_coreml_whisper.py  int_lab.py  launch.py  live2d.py  live2d_model.py  llm.py  main.py  model_dict.json  pyproject.toml  requirements.txt  run_server.bat  run_server.py  sample.env  server.py  speech2text.py  start_cli.py  start_webui.py  test.py  text2speech.py  (+6 more)
.github/: FUNDING.yml
.github/workflows/: codeql.yml  docker-publish.yml  fossa_scan.yml
Behavior/: BehaviorMeta.py  TalkBehavior.py  generic_behavior.py
Emotion/: EmotionHandler.py
EmotionHandler/: HandleEmotion.py
actions/: ActionInterface.py  ActionsMeta.py  TalkAction.py  TalkBehavior-Talk.py
asr/: asr_factory.py  asr_interface.py  asr_with_vad.py  azure_asr.py  faster_whisper_asr.py  fun_asr.py  openai_whisper_asr.py  sherpa_onnx_asr.py  vad.py  whisper_cpp_asr.py
benchmarks/: __init__.py  asr_bench.py
characters/: en_mashiro.yaml  en_nuke_debate.yaml  en_unhelpful_ai.yaml  mashiro.yaml  sample_conf.yaml  zh_米粒.yaml  zh_翻译腔.yaml
config_alts/: alt_conf.yaml  mashiro.yaml  sample_conf.yaml  sample_conf2.yaml  sample_conf3.yaml  sherpaASRTTS_sense_voice_melo.yaml  sherpaASRTTS_sense_voice_piper_en.yaml  sherpaASRTTS_sense_voice_vits_zh.yaml  sherpaASR_paraformer.yaml  sherpaASR_sense_voice.yaml
danmakuAPI/: bilibili_liver.py  prompt_template.py
danmakuAPI/blivedm/: __init__.py  handlers.py  utils.py
doc/: API.md  live2d.md
doc/sample_conf/: sherpaASRTTS_sense_voice_melo.yaml  sherpaASRTTS_sense_voice_piper_en.yaml  sherpaASRTTS_sense_voice_vits_zh.yaml  sherpaASR_paraformer.yaml  (+1 more)
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: live2d_model.py
knowledge_base/: README.md
legacy/: legacy.py  new.py
llm/: Ollama.py  fake_llm.py  hybrid_client.py  llm_client.py  llm_factory.py  llm_interface.py  mem0.py  memGPT.py  memgpt_config.yaml  ollama.py  run.py
memory/: ActionMemory.py  MemoryManager.py  SearchVectorDB.py
modified_lib_files/: server.py
prompts/: prompt_loader.py
queue/: ActionSelectionQueue.py
requirements/: requirements.txt
scripts/: install_piper_tts.py
speech2text/: asr_with_vad.py  az-old.py  azureSTT.py  azure_asr.py  faster_whisper_asr.py  vad.py  ws_input_stream.py
static/: TaskQueue.js  index.css  index.html  index.js  live2d.js  modelDict.js  sse-testing.html
translate/: deeplx.py  translate_factory.py  translate_interface.py
tts/: azureTTS.py  barkTTS.py  cosyvoiceTTS.py  edgeTTS.py  fishAPITTS.py  meloTTS.py  piperTTS.py  pyttsx3TTS.py  sherpaOnnxTTS.py  stream_audio.py  tts_factory.py  tts_interface.py  xTTS.py
utils/: ActionPriority.py  ActionSelectionQueue.py  DiscordInputList.py  DiscordVoiceTranscription.py  GenderClassifierModel.py  InferenceQueue.py  InputQueue.py  OutputQueue.py  PromptFormatter.py  PromptLoader.py  SingletonMeta.py  StateInfo.py  VoiceListener.py  audio_preprocessor.py  install_utils.py  test.py
(+161 files in other folders)
